# python-batyr

./: .gitignore  LICENSE  Procfile  README.md  main.py  models.py  pyproject.toml
app/: beat.py  config.py  dependencies.py  main.py  models.py  scheduler.py  schemas.py  tasks.py  tests.py
app/migrations/: 1_add_field_to_person.py
migrations/: 1_add_field_to_person.py
