[tool.poetry]
name = "python-batyr"
version = "0.1.0"
description = ""
authors = ["Artem <artinnok@protonmail.com>"]

[tool.poetry.dependencies]
python = "=3.9.12"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
