[tool.poetry]
name = "python-batyr"
version = "0.1.0"
description = ""
authors = ["Artem <artinnok@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.9.12"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
peewee = "^3.15.0"
pytest = "^7.1.2"
environs = "^9.5.0"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"
rq = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
